# trae-agent

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING  CONTRIBUTING.md  LICENSE  Makefile  README.md  TRAJECTORY_RECORDING.md  command.sh  output.txt  output1.txt  pyproject.toml  test.py  trae_config.json  trae_config.json.example
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  proposal.yml  question.yml
.github/workflows/: ci.yml  pre-commit.yml  unit-test.yml
docs/: TRAJECTORY_RECORDING.md  roadmap.md  tools.md
evaluation/: SWE-bench.md  swebench.py  swebench_setup.sh
sdk/: _run.py  readme.md
sdk/python/: __init__.py  _run.py
tests/: test_cli.py
tests/agent/: test_trae_agent.py
tests/tools/: test_bash_tool.py  test_edit_tool.py  test_json_edit_tool.py
tests/utils/: test_config.py  test_google_client.py  test_ollama_client_utils.py  test_openai_compatible_client.py  test_openrouter_client_utils.py
trae_agent/: __init__.py  cli.py
trae_agent/agent/: __init__.py  agent_basics.py  base.py  trae_agent.py
trae_agent/db/: ckg.py  db.py
trae_agent/prompt/: agent_prompt.py
trae_agent/tools/: __init__.py  base.py  bash_tool.py  ckg_tool.py  edit_tool.py  json_edit_tool.py  run.py  sequential_thinking_tool.py  task_done_tool.py
trae_agent/tools/ckg/: base.py  ckg_database.py
trae_agent/utils/: anthropic_client.py  azure_client.py  base_client.py  cli_console.py  config.py  constants.py  doubao_client.py  google_client.py  lake_view.py  llm_basics.py  llm_client.py  ollama_client.py  openai_client.py  openrouter_client.py  qwen_client.py  retry_utils.py  trajectory_recorder.py
trae_agent/utils/models/: azure.py  doubao.py  openai.py  openai_client.py  openai_compatible_base.py  openrouter.py  qwen.py  readme.md
